--- a/jenkinsfile
+++ b/jenkinsfile
@@ -41,7 +41,7 @@ pipeline{
 
 
 
-              stage('build')
+              stage('build-01')
                 {
               steps{
                   script{
