--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 
   <build>
     <finalName>finalmavenwebapp</finalName>
-    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
+    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -01-->
       <plugins>
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
